<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount_tv"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_loan_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/loan_amount_et" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate_tv"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_interest_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/interest_rate_et" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_term_tv"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_loan_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/loan_term_et" />

        <Button
            android:id="@+id/btn_calculate_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_monthly_payment_btn" />

        <TextView
            android:id="@+id/tv_monthly_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_refinance_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refinance_calculator_btn"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_affordability_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/affordability_calculator_btn" />

    </LinearLayout>
</ScrollView>
